# ord-interface

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README-old.md  README.md  dump.rdb  format.sh  pyproject.toml  pytype.cfg  requirements.txt  run_long_tests.sh  run_tests.sh  setup.py  test_requirements.txt
.github/workflows/: checks.yml  cleanup.yml  run_tests.yml  tests.yml
app/: .eslintignore  .eslintrc.cjs  .eslintrc.js  .prettierignore  .prettierrc.json  README.md  babel.config.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts  vue.config.js
app-react/: package.json
app-react/public/: index.html
app-react/src/: App.js
app-react/src/components/: Nav.js
app-react/src/styles/: browse.css  table.css
app/public/: index.html  manifest.json
app/src/: App.css  App.js  App.scss  App.tsx  App.vue  index.scss  main.js  main.tsx
app/src/components/: ChartView.scss  ChartView.tsx  CopyButton.scss  CopyButton.tsx  CopyButton.vue  DatasetCard.vue  DownloadResults.scss  DownloadResults.tsx  DownloadResults.vue  EntityTable.scss  EntityTable.tsx  EntityTable.vue  FloatingModal.scss  FloatingModal.tsx  FloatingModal.vue  Footer.js  HeaderNav.scss  HeaderNav.tsx  HeaderNav.vue  LoadingSpinner.scss  LoadingSpinner.tsx  LoadingSpinner.vue  MainFooter.scss  MainFooter.tsx  MainFooter.vue  ModalKetcher.scss  Nav.js  (+8 more)
copilot/: .workspace
copilot/front-end/: manifest.yml
example/: main.html  main.py  run.sh
ord_interface/: Dockerfile  Dockerfile.dockerignore  __init__.py  about.html  browse.html  build_database.py  build_database_test.py  build_test_database.sh  celeryconfig.py  docker-compose.yml  interface.py  nginx.conf  ord_client.py  ord_client_test.py  query.py  query_test.py  reaction.html  run_tests.sh  search.html  search.py  start_app.sh
ord_interface/about/: about.html
ord_interface/api/: README.md  client.py  client_test.py  conftest.py  dump.rdb  editor.py  main.py  nl_query.py  nl_query_eval.py  nl_query_eval_cases.json  nl_query_eval_cases.yaml  nl_query_eval_test.py  nl_query_prompt.md  nl_query_test.py  queries.py  queries_test.py  search.py  search_test.py  testing.py  view.py  view_test.py
ord_interface/client/: __init__.py  browse.html  build_database.py  build_database_test.py  docker-compose.yml  ketcher_iframe.html  ord_client.py  ord_client_test.py  query.py  query_test.py  reaction_view.html  search.html  search.py
ord_interface/docker/: Dockerfile  build_database.sh  update_image.sh
ord_interface/editor/: Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  format.sh  launch.sh  requirements.txt  run_tests.sh  schema.sql
ord_interface/visualization/: drawing.py  filters.py  filters_test.py  generate_text.py  generate_text_test.py
vue-app/: package-lock.json  package.json  vue.config.js
(+184 files in other folders)
